# easy-rpc

./: Cargo.toml  LICENSE  README.md
js/: easy-rpc.js  msgpack.js
src/: lib.rs  shm.rs  ws.rs
tests/: test.html  test.rs
